# esp32_fizzy_wair

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/ble/: CMakeLists.txt
components/ble/include/: ble.h
components/ble/src/: ble.c
components/mono_lcd/: CMakeLists.txt  fonts6x8.h  mono_lcd.c  mono_lcd.h
components/sd_card_logic/: CMakeLists.txt  sd_card_logic.c  sd_card_logic.h
main/: CMakeLists.txt  fizzy_wair.c  fonts6x8.h
